--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  get_storage: ^2.1.1
   jwt_decoder: ^2.0.1
   flutter_spinkit: ^5.2.1
   lottie: ^3.1.3
@@ -44,7 +43,6 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.1.0
-  intl:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   flutter_chat_bubble: ^2.0.2
@@ -67,8 +65,10 @@ dependencies:
   printing: ^5.11.0
   share_plus:
   flutter_polyline_points: ^3.0.0
-  fvm: ^3.2.1
+  fvm:
   get: ^4.7.2
+  flutter_localization:
+  intl:
 
 dev_dependencies:
   flutter_test:
@@ -91,6 +91,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
