localization updated on phone number input screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,8 @@ dependencies:
   fvm:
   get: ^4.7.2
   flutter_localization:
-  intl:
+  intl: any
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
