--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
         android:label="ryder"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBFi80uuJIWkkLCpodFa8oXmD8XD_h8LMc"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
