--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flutter_localization:
   intl: any
   get_storage: ^2.1.1
+  bottom_picker: ^4.1.1
 
 dev_dependencies:
   flutter_test:
